...
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
        >
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/listButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="35dp"
        android:onClick="onLaunchListClicked"
        android:text="ADD FRIEND"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ZoomInButton"
        android:layout_width="wrap_content"
...
