<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rotation="0"
    tools:context=".activity.CompassActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/include"
        android:layout_width="414dp"
        android:layout_height="408dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/compass_base"
            android:layout_width="392dp"
            android:layout_height="414dp"
            android:rotation="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/compass_circle" />

        <ImageView
            android:id="@+id/compass_base2"
            android:layout_width="262dp"
            android:layout_height="269dp"
            android:rotation="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/compass_circle" />

        <ImageView
            android:id="@+id/compass_base3"
            android:layout_width="197dp"
            android:layout_height="156dp"
            android:rotation="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:srcCompat="@drawable/compass_circle" />

        <ImageView
            android:id="@+id/compass_base4"
            android:layout_width="108dp"
            android:layout_height="85dp"
            android:rotation="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/compass_circle" />

        <ImageView
            android:id="@+id/coordDot2"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="172dp"
            android:rotation="0"
            app:layout_constraintCircle="@+id/include"
            app:layout_constraintCircleAngle="0"
            app:layout_constraintCircleRadius="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/coord_dot" />


        <TextView
            android:id="@+id/labelView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="204dp"
            android:layout_marginEnd="176dp"
            android:rotation="0"
            android:text="Julia"
            app:layout_constraintCircle="@+id/compass_base"
            app:layout_constraintCircleAngle="0"
            app:layout_constraintCircleRadius="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/compass_base" />

        <TextView
            android:id="@+id/labelView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="156dp"
            android:layout_marginEnd="164dp"
            android:rotation="0"
            android:text="friend"
            app:layout_constraintCircle="@+id/compass_base"
            app:layout_constraintCircleAngle="0"
            app:layout_constraintCircleRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/compass_base" />

        <ImageView
            android:id="@+id/coordDot"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:rotation="0"
            app:layout_constraintCircle="@+id/include"
            app:layout_constraintCircleAngle="0"
            app:layout_constraintCircleRadius="130dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/coord_dot" />

        <EditText
            android:id="@+id/TextViewUID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="73dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"
            app:layout_constraintVertical_bias="0.644" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/listButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="35dp"
        android:onClick="onLaunchListClicked"
        android:text="ADD FRIEND"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewUIDbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="onLaunchViewClicked"
        android:text="View"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <ImageView
        android:id="@+id/zoomOutBtn"
        android:layout_width="99dp"
        android:layout_height="70dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zoomInBtn"
        android:onClick="onZoomOutClicked"
        app:srcCompat="@android:drawable/btn_minus" />

    <ImageView
        android:id="@+id/zoomInBtn"
        android:layout_width="100dp"
        android:layout_height="64dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="-25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        android:onClick="onZoomInClicked"
        app:srcCompat="@android:drawable/btn_plus" />

</androidx.constraintlayout.widget.ConstraintLayout>